--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,3 +1,4 @@
 
-<h2>{{title}}</h2>
-<p>{{message}}</p>
+<h2 id="index">{{title}}</h2>
+<p id="index">{{message}}</p>
+<img src="./img/Astronauta2.jpeg" alt="Astronautas" id="imgastr" height="200px">
