--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,11 +1,6 @@
 * { 
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 10px;
 }
 
 body {
@@ -15,20 +10,20 @@ body {
   font-size: 1.6rem;
   margin: 0;
   padding: 0;
-  
+ 
 }
 
 .header {
-  margin: 1rem;
+  position: absolute;
+  top: 0 ;
+  width: 100%;
 }
 
 .container {
-  margin: 2rem auto;
+  margin: 2rem;
   padding: 2rem;
-  background-color: #6fb7ef;
+  background-color: #e06fef;
   border-radius: 8px;
-  max-width: 1200px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
@@ -37,11 +32,24 @@ h1 {
   margin-bottom: 1rem;
 }
 
+#index{  
+  text-align: center;
+  font-size: 40px;
+  margin-top: 30px;
+}
+#imgastr{
+  height: 60%;
+  width: 40%;
+  display:flex;
+  margin: auto;
+}
 .nav {
   background-color: #797575;
   padding: 1rem;
   text-align: center;
   border-radius: 8px;
+  display: flex;
+  flex-flow: row;
 }
 
 .nav ul {
@@ -80,23 +88,70 @@ h1 {
 .button:hover {
   background-color: #c30052;
 }
+.container{
+  width: 90%;
+  height: 70%;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+.astronauta{
+   display: flex;
+   flex-direction: column;
+  align-items: center;
+  margin-top: 3em;
+  background-color: antiquewhite;
+  padding: 30px 0px 30px 0px;
+
+}
+input{
+padding-left:50px;
+margin: 50px;
+}
+#nombre{
+  margin-left: 10px;
+}
+#edad{
+  margin-left: 30px;
+}
+#rol{  margin-left: 42px; }
+#casa{  margin-left: 25px;}
+
+
+
 footer{
   background-color: #797575;
   padding: 1rem;
   text-align: center;
   border-radius: 8px;
-  position: bottom;
+  position: fixed bottom;
+  bottom: 0;
+  width: 100%;
 }
-.card{
+.col-md-2{
   border: 1px solid rebeccapurple;
+  border-radius: 10%;
+  margin: 5px;
+  padding: 15px 10px;
+  background-color: rgb(249, 215, 170);
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+ 
+  
+}
+.col-sm-3{
+  border: 1px solid rgb(61, 228, 250);
   border-radius: 20%;
   margin: 5px;
   padding: 5px;
-  background-color: antiquewhite;
-  align-content: center;
+  background-color: rgb(249, 215, 170);
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+.row{ 
+display: flex;
+flex-wrap: wrap;
 
 }
-.containerCard{
-  margin: 10px;
-  padding: 5px;
-}
+
