--- a/src/views/formulario.hbs
+++ b/src/views/formulario.hbs
@@ -1,4 +1,5 @@
 <h1>Crear Nuevo Astronauta</h1>
+<div class="astronauta">
 <form action="/personajes/crear" method="POST" enctype="multipart/form-data">
   <label for="nombre">Nombre:</label>
   <input type="text" id="nombre" name="nombre" required><br><br>
@@ -6,7 +7,7 @@
   <label for="edad">Edad:</label>
   <input type="number" id="edad" name="edad" required><br><br>
 
-  <label for="casa">Casa:</label>
+  <label for="casa">Poder:</label>
   <input type="text" id="casa" name="casa" required><br><br>
 
   <label for="rol">Rol:</label>
@@ -15,5 +16,7 @@
   <label for="imagen">Imagen:</label>
   <input type="file" id="imagen" name="imagen" accept=".jpg, .jpeg, .png" required><br><br>
 
-  <button type="submit">Crear Astronauta</button>
+  <button type="submit" class="btn btn-success">Crear Astronauta</button>
+
 </form>
+</div>
