--- a/src/views/nsaApi.hbs
+++ b/src/views/nsaApi.hbs
@@ -2,7 +2,7 @@
     <h1 style="text-align: center;">NASA Astronomy Picture Of The Day</h1>
     <h2 id="title">Rumbo a Marte!</h2>
     <h3>Date: <span id="date"></span></h3>
-    <img id="pic" src="" alt="NASA Picture Of The Day, sometimes is video and not load" width="100%">
+    <img id="pic" src="" alt="NASA Picture Of The Day, sometimes is video and not load" width="100%" height="400px">
     <p id="explanation"></p>
 
       <script src="/scripts/script.js"></script>
