--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -1,3 +1,3 @@
 <footer>
-  Nuestra aplicación web - express - MongoDB - HBS - 2024
+  Nuestra aplicación web - HBS - express - MongoDB - Api - 2024
   </footer>
