--- a/src/views/editPersonaje.hbs
+++ b/src/views/editPersonaje.hbs
@@ -1,3 +1,4 @@
+<div class="container2">
 <h1>Editar Astronauta</h1>
 <div class="astronauta">
 <form
@@ -16,5 +17,6 @@
   <label>Imagen:</label>
   <input type="file" name="imagen" /><br><br>
   <button type="submit" class="btn btn-warning">Actualizar</button>
-  </div>
 </form>
+ </div>
+</div>
