--- a/src/views/formulario.hbs
+++ b/src/views/formulario.hbs
@@ -1,3 +1,4 @@
+<div class="container2">
 <h1>Crear Nuevo Astronauta</h1>
 <div class="astronauta">
 <form action="/personajes/crear" method="POST" enctype="multipart/form-data">
@@ -19,4 +20,5 @@
   <button type="submit" class="btn btn-success">Crear Astronauta</button>
 
 </form>
+</div>
 </div>
