--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,4 +1,5 @@
-
+<div class="container2">
 <h2 id="index">{{title}}</h2>
 <p id="index">{{message}}</p>
-<img src="./img/Astronauta2.jpeg" alt="Astronautas" id="imgastr" height="200px">
+<img src="./img/Astronauta2.jpeg" alt="Astronautas" id="imgastr" >
+</div>
