--- a/src/views/nsaApi.hbs
+++ b/src/views/nsaApi.hbs
@@ -1,4 +1,4 @@
-
+<div class="cointainer2">
     <h1 style="text-align: center;">NASA Astronomy Picture Of The Day</h1>
     <h2 id="title">Rumbo a Marte!</h2>
     <h3>Date: <span id="date"></span></h3>
@@ -7,3 +7,4 @@
 
       <script src="/scripts/script.js"></script>
    
+</div>
