--- a/src/views/personajes.hbs
+++ b/src/views/personajes.hbs
@@ -1,19 +1,23 @@
+ <div class="title2">
+<h1 class="title">Astronautas</h1>
+    <br><br>
+</div>
 
-<section>
-    <h1>Astronautas</h1>
-
+<section> 
+ 
+<div class="row row-cols-1 row-cols-md-3 g-4"></div>
       {{#each personajes}}
        
-<div class="row">
-  <div class="col-md-2 mb-3">
+<div class="col">
+  <div class="card h-100">
           {{#if imagen}}
-          <img src="./uploads/{{imagen}}" alt="{{nombre}}" style="max-width: 150px; height: 200px">
+          <img src="./uploads/{{imagen}}" alt="{{nombre}}" class="card-img-top" >
           {{/if}}
-  <div class="card-body">
-    <h2>{{nombre}}</h2>
-          <p>Edad: {{edad}}</p>
-          <p>Poder: {{casa}}</p>
-          <p>Rol: {{rol}}</p>
+  <div class="card-body">   
+    <h2 class="card-title">{{nombre}}</h2>
+          <p class="card-text">Edad: {{edad}}</p>
+          <p class="card-text">Poder: {{casa}}</p>
+          <p class="card-text">Rol: {{rol}}</p>
           <a href="/personajes/edit/{{this._id}}" class="btn btn-warning">Editar</a>
           <a href="/personajes/delete/{{this._id}}" class="btn btn-danger">Eliminar</a>
   </div>
@@ -21,5 +25,5 @@
 </div>
 
       {{/each}}
-
+</div>
   </section>
