--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -20,8 +20,6 @@ body {
 }
 
 .container {
-  display:flex;
-  flex-direction: row;
   margin: 2rem;
   padding: 2rem;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -112,9 +110,9 @@ margin: 50px;
 #edad{  margin-left: 30px; }
 #rol{  margin-left: 42px; }
 #casa{  margin-left: 25px;}
-h1{
-  display: flex;
-  text-align: center;
+
+.containerAtronautas{
+  
 }
 section{
   display:flex;
